# NPUShield

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/: install-service.sh  npushield.service
docs/: KNOWLEDGE_BASE_DESIGN.md  project-plan.md
kb/: .kb_cache.db-journal
kb/code/: cookbook.md  errors.md  rkllm-api.md
kb/infra/: commands.yaml  faq.md  servers.yaml  services.yaml  troubleshooting.md
src/api/: server.py
src/core/: auth.py  kb_index.py  kb_loader.py  output_validator.py  persona_router.py  prompt_normalizer.py  router.py  tool_executor.py  tool_registry.py
src/metrics/: collector.py
src/providers/: rkllm_capi.py  rkllm_stateless.py  rkllm_warm_worker.py
src/ui/: __init__.py  chat_tui.py
tests/: test_auth.py  test_chat_tool_integration.py  test_core.py  test_kb_index.py  test_metrics.py  test_persona_router.py  test_provider_stateless.py  test_tool_executor.py  test_tool_registry.py  test_ui_chat.py  test_warm_worker.py
